--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 
     <h1>Alternative Interface for health.ch</h1>
 
-    <blockquote>Disclaimer: The data from this website is extracted from health.ch</blockquote>
+    <blockquote>
+        Disclaimer: All the data displayed on this website belongs to health.ch.
+        This is a private suggestion of an improvement of the directory health.ch.
+    </blockquote>
 
     <form class="form-inline" role="form">
 
