--- a/index.html
+++ b/index.html
@@ -24,6 +24,23 @@
         .container tr.highlighted td {
             background-color: rgba(255, 227, 13, 0.49) !important;
         }
+
+        /* you can also define the transition style
+           on the base class as well (.anim) */
+        .anim.ng-enter,
+        .anim.ng-leave {
+          -webkit-transition:0.5s linear all;
+          transition:0.5s linear all;
+        }
+
+        .anim.ng-enter,
+        .anim.ng-leave.ng-leave-active {
+          opacity:0;
+        }
+        .anim.ng-leave,
+        .anim.ng-enter.ng-enter-active {
+          opacity:1;
+        }
     </style>
 </head>
 <body>
@@ -60,7 +77,7 @@
             <th>Fax</th>
         </thead>
         <tbody>
-            <tr ng-repeat="item in cat_lvl_2.ch | filter:search:strict track by item.id " id="item-{{ item.id }}" ng-class="{highlighted: item.highlighted}">
+            <tr class="anim" ng-repeat="item in cat_lvl_2.ch | filter:search:strict track by item.id " id="item-{{ item.id }}" ng-class="{highlighted: item.highlighted}">
                 <td><b>{{ item.name }}</b></td>
                 <td>{{ item.address }}</td>
                 <td>{{ item.phone }}</td>
