--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <table class="table table-striped">
         <thead>
             <th>Name</th>
+            <th>City</th>
             <th>Address</th>
             <th>Phone</th>
             <th>Email</th>
@@ -79,6 +80,7 @@
         <tbody>
             <tr class="anim" ng-repeat="item in cat_lvl_2.ch | filter:search:strict track by item.id " id="item-{{ item.id }}" ng-class="{highlighted: item.highlighted}">
                 <td><b>{{ item.name }}</b></td>
+                <td>{{ item.city }}</td>
                 <td>{{ item.address }}</td>
                 <td>{{ item.phone }}</td>
                 <td><a href="mailto:{{ item.email }}">{{ item.email }}</a></td>
